# celery-sandbox

./: .gitignore  README.md  pyproject.toml
app/: .env.docker
app/api/: Dockerfile  main.py  requirements.txt
app/client/: client.py
app/shared/: app.py
app/workers/: Dockerfile  requirements.txt  tasks.py
local/: compose.yml
local/terraform/: main.tf  output.tf  providers.tf
